   responsiveness of name autocompletion, and makes it possible to
   format much bigger name indexes.

 * Improved graphical look of canvas-based tracks during zoom
   operations.

 * Fixed a bug in which the Y-axis scale for feature density
   histograms was sometimes drawn incorrectly.

 * Greatly improved speed and responsiveness of BAM data backend.

 * Added support in HTMLFeatures and Alignments tracks for a
   `style.featureScale` configuration variable, which, if set,
   specifies a minimum zoom scale (pixels per basepair) for displaying
   features.  If zoomed out more than this (i.e. fewer pixels per bp),
   either histograms or a "too many features" message will be
   displayed.

1.7.6     2013-01-10 01:25:58 America/New_York

 * Fixed a bug in the BAM direct-access backend that prevented some
   BAM files from being displayed.

1.7.5     2012-12-12 13:40:12 America/New_York

 * Fixed a bug in which typing a key that is bound to a global
   keyboard shortcut (currently only 't' or '?') in the location box
   would erroneously execute the action for that global shortcut.
   Thanks to Gregor Rot for pointing this out.

 * Fixed a bug in which toggling 'Show labels' in the track menu did
   not re-layout the track on the first toggling.

 * Make columns in the faceted track selector initially each be an
   equal percentage of the total width of the grid.  Thanks to Steffi
   Geisen for pointing this out.

1.7.4     2012-12-06 23:08:22 America/New_York

 * Fixed a bug preventing loading of JBrowse in some browsers.  Thanks
   to Steffi Geisen for pointing this out.

 * Fixed a bug in the BigWig data backend that prevented some BigWig
   files with large numbers of reference sequences from displaying.
   Thanks to Gregg Helt for providing sample data to help isolate
   this.

 * Fixed a bug in the BigWig data backend that prevented BigWig files
   rendering in Safari.  Thanks to Gregor Rot for his help in isolating this.
