@@ -155,6 +155,7 @@ var BamFile = declare( null,
     },
 
     _readBAMheader: function( successCallback, failCallback ) {
+        var thisB = this;
         // We have the virtual offset of the first alignment
         // in the file.  Cannot completely determine how
         // much of the first part of the file to fetch to get just
@@ -162,10 +163,10 @@ var BamFile = declare( null,
         // up to the start of the BGZF block that the first
         // alignment is in, plus 64KB, which should get us that whole
         // BGZF block, assuming BGZF blocks are no bigger than 64KB.
-        this.data.read(
+        thisB.data.read(
             0,
-            this.minAlignmentVO ? this.minAlignmentVO.block + 65535 : null,
-            dojo.hitch( this, function(r) {
+            thisB.minAlignmentVO ? thisB.minAlignmentVO.block + 65535 : null,
+            function(r) {
                 var unc = BAMUtil.unbgzf(r);
                 var uncba = new Uint8Array(unc);
 
@@ -181,33 +182,44 @@ var BamFile = declare( null,
                 //     header += String.fromCharCode(uncba[i + 8]);
                 // }
 
-                var nRef = readInt(uncba, headLen + 8);
-                var p = headLen + 12;
 
-                this.chrToIndex = {};
-                this.indexToChr = [];
-                for (var i = 0; i < nRef; ++i) {
-                    var lName = readInt(uncba, p);
-                    var name = '';
-                    for (var j = 0; j < lName-1; ++j) {
-                        name += String.fromCharCode(uncba[p + 4 + j]);
+                // have to do another request, because sometimes
+                // minAlignment VO is just flat wrong.
+                // if headLen is not too big, this will just be in the
+                // RemoteBinaryFile cache
+                thisB.data.read( 0, headLen+8+65536,
+                                 function(r) {
+                    var unc = BAMUtil.unbgzf(r);
+                    var uncba = new Uint8Array(unc);
+
+                    var nRef = readInt(uncba, headLen + 8);
+                    var p = headLen + 12;
+
+                    thisB.chrToIndex = {};
+                    thisB.indexToChr = [];
+                    for (var i = 0; i < nRef; ++i) {
+                        var lName = readInt(uncba, p);
+                        var name = '';
+                        for (var j = 0; j < lName-1; ++j) {
+                            name += String.fromCharCode(uncba[p + 4 + j]);
+                        }
+                        var lRef = readInt(uncba, p + lName + 4);
+                        // dlog(name + ': ' + lRef);
+                        thisB.chrToIndex[name] = i;
+                        if (name.indexOf('chr') == 0) {
+                            thisB.chrToIndex[name.substring(3)] = i;
+                        } else {
+                            thisB.chrToIndex['chr' + name] = i;
+                        }
+
+                        thisB.indexToChr.push({ name: name, length: lRef });
+
+                        p = p + 8 + lName;
                     }
-                    var lRef = readInt(uncba, p + lName + 4);
-                    // dlog(name + ': ' + lRef);
-                    this.chrToIndex[name] = i;
-                    if (name.indexOf('chr') == 0) {
-                        this.chrToIndex[name.substring(3)] = i;
-                    } else {
-                        this.chrToIndex['chr' + name] = i;
-                    }
 
-                    this.indexToChr.push({ name: name, length: lRef });
-
-                    p = p + 8 + lName;
-                }
-
-                successCallback();
-        }));
+                    successCallback();
+            });
+        });
     },
 
     blocksForRange: function(refId, min, max) {
